# quantum-optimization-benchmarks

./: .gitignore  Makefile  README.md  evaluate_multi_qpu_bandits.py  quantum_token_saving.ipynb  requirements.txt  uv_install.md
research_benchmark/: .gitignore  README.md  audit_market_share_solutions.py  create_mdkp_simulator_csv_and_plot.py  create_mis_simulator_csv_and_plots.py  generate_mkp_vqe_tables.py  plot_mkp_method_comparison.py  pyproject.toml  run_all_algorithms_smoke.py  run_benchmark.py  run_hardware_benchmark.py  run_simulator_benchmark.py
research_benchmark/all_logs/: README.md
research_benchmark/checkpoints/: README.md  market_share.json  mis.json  mkp.json  qap.json
research_benchmark/checkpoints/cvar_vqe/: market_share_cvar_vqe.json  mis_cvar_vqe.json  mkp_cvar_vqe.json  qap_cvar_vqe.json
research_benchmark/checkpoints/ma_qaoa/: market_share.json  mis.json  mkp.json  qap.json
research_benchmark/checkpoints/pce/: market_share.json  mis.json  mkp.json  qap.json
research_benchmark/checkpoints/qaoa/: market_share.json  mis.json  mkp.json  qap.json
research_benchmark/checkpoints/qrao/: market_share.json  mis.json  mkp.json  qap.json
research_benchmark/checkpoints/vqe/: mis_vqe.json  mkp.json  qap.json
research_benchmark/checkpoints/ws_qaoa/: market_share.json  mis.json  mkp.json  qap.json
research_benchmark/examples/: README.md  ibm_credentials.example.json  ibm_expired_credentials.json  market_share_demands.json
research_benchmark/research_benchmark/: README.md
research_benchmark/tests/: test_parsers.py
(+1527 files in other folders)
